@@ -38,6 +38,9 @@ slapt-get \- frontend to pkgtools
 [
 .B --no-md5
 ]
+[
+.B --interactive
+]
 .LP
 .B targets:
 [
@@ -98,6 +101,9 @@ Ignore exclude list and install excluded packages anyway.
 .TP
 .B --no-md5
 Do not perform MD5 check sum on package.  This is dangerous!
+.TP
+.B --interactive
+Prompt before each package upgrade.
 .SH TARGETS
 .TP
 .B --update
